vlib/v/checker/tests/string_index_non_int_err.vv
fn main() {
	v := 'foo'
	println(v['f'])
	println(v[true])
	println(v[[23]])
}
